Centered the webpage. Fixed the title bar not aligning properly.

--- a/whogotmesick.css
+++ b/whogotmesick.css
@@ -1,6 +1,9 @@
 body {
 	font-family:Arial, Helvetica, sans-serif;
 	text-shadow:1px 1px 0px #ffffff;
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
 }
 
 .top_right{
@@ -75,16 +78,16 @@ body {
 	right:120px;
 }
 
-.top{
-	margin:0px;
+.top {
+	margin: 0px 10px;
 	padding: 1px;
 	background-color:#909090;
-	max-width:800px;
+	width: 100%;
 	position:relative;
 }
 
-.main{
-	max-width:800px;
+.main {
+	width: 100%;
 	position:relative;
 	background-color:#f0f0f0;
 	text-align:left;
